[BUGFIX] Ensure that navbar-collapse has a maxheight if menu is fixed

--- a/Resources/Public/Less/Theme/navbar.less
+++ b/Resources/Public/Less/Theme/navbar.less
@@ -9,11 +9,6 @@
         position: fixed;
     }
 }
-.navbar-fixed-top .navbar-collapse,
-.navbar-fixed-bottom .navbar-collapse,
-.navbar-collapse {
-    max-height: none;
-}
 
 
 //
